fixed spacing between products, added product API

--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
-#pageTitle{
-    text-align: center;
+.pageTitle {
+  text-align: center;
+  color: #f8d7da;
+  padding-bottom: 10px;
+  font-size: 62px;
+  -webkit-text-stroke: #927f80 1px;
+}
+
+.productImage {
+  width: 200px;
+  height: auto;
+}
+
+.text{
     color: #f8d7da;
-    padding-bottom: 10px;
-    font-size: 62px;
-    -webkit-text-stroke: #927f80 1px;
 }
